objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Am_I_the_record_Owners_Manager__c</fullName>
        <description>Used to calculate whether the logged in user is the record Owners Manger or not.</description>
        <formula>IF( Owner:User.ManagerId  = $User.Id , True , False)</formula>
        <label>Am I the record Owners Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking_Id__c</fullName>
        <externalId>true</externalId>
        <label>Booking Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Booking_Number__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>Booking Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Booking_Rejected_by_Depot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when a depot rejects a booking. A reason for this rejection should be provided as a text comment with the rejection.</description>
        <label>Booking Rejected by Depot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Email_Address__c</fullName>
        <label>Collection Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CC_Fax_Number__c</fullName>
        <label>Collection Contact Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CC_First_Name__c</fullName>
        <label>Collection Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Last_Name__c</fullName>
        <label>Collection Contact Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Middle_Initials__c</fullName>
        <label>Collection Contact Middle Initials</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Mobile_Phone_Number__c</fullName>
        <label>Collection Contact Mobile Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CC_Phone_Extension__c</fullName>
        <label>Collection Contact Phone Extension</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Phone_Number__c</fullName>
        <label>Collection Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CC_Title__c</fullName>
        <label>Collection Contact Title</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Notes__c</fullName>
        <description>Used to record details of why a Booking was cancelled.</description>
        <inlineHelpText>Record details of who, when and why the booking has been cancelled.</inlineHelpText>
        <label>Cancellation Notes</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carriage_Forward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carriage Forward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Time__c</fullName>
        <label>Close Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coll_Account_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Address</label>
        <referenceTo>Account_Address__c</referenceTo>
        <relationshipLabel>Bookings (Collection Account Address)</relationshipLabel>
        <relationshipName>CollectionBookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coll_City__c</fullName>
        <description>TOWN from GB Mailer</description>
        <label>City/Town</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coll_Country__c</fullName>
        <description>Default &quot;GBR&quot; (ISO-3 Code)</description>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coll_County__c</fullName>
        <description>CNTY from GB Mailer</description>
        <label>County/Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coll_District__c</fullName>
        <description>DPLO from GB Mailer</description>
        <label>District</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coll_Org_Name__c</fullName>
        <description>ORGN from GB Mailer</description>
        <label>Collection Org Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coll_Postcode__c</fullName>
        <description>PCOD from GB Mailer</description>
        <label>Collection Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coll_Premise_Name__c</fullName>
        <description>BNAM from GB Mailer</description>
        <label>Premise Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coll_Premise_Number__c</fullName>
        <description>BNUM from GB Mailer</description>
        <label>Premise Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coll_Street_1__c</fullName>
        <description>THOR from GB Mailer</description>
        <label>Street Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coll_Street_2__c</fullName>
        <description>DDLO from GB Mailer</description>
        <label>Street Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coll_Sub_Premise__c</fullName>
        <description>SUBB from GB Mailer</description>
        <label>Sub Premise</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, a collection has been confirmed</description>
        <label>Collection Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collection_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collection Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bookings (Collection Contact)</relationshipLabel>
        <relationshipName>CC_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collection_Depot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated by routing table logic</description>
        <label>Collection Depot</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Collection Depot must be an Account of type &quot;Depot&quot;.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Depot</value>
            </filterItems>
            <filterItems>
                <field>Account.Operational_for_Bookings__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bookings (Collection Depot)</relationshipLabel>
        <relationshipName>ColDepBookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collection_Instructions_Comments__c</fullName>
        <description>This field is for capturing Collection Instructions/Comments in relation to a booking</description>
        <label>Collection Instructions/Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Instructions__c</fullName>
        <label>Collection Instructions</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Number__c</fullName>
        <description>Collection Number for this Booking</description>
        <inlineHelpText>Collection Number for this Booking</inlineHelpText>
        <label>Collection Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Ready_Time__c</fullName>
        <label>Collection Ready Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Commercial_Invoice_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial Invoice Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <description>Value restricted by LOB Selected</description>
        <label>Type of packaging</label>
        <picklist>
            <picklistValues>
                <fullName>TSL 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSL 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSL 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSL 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSL 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assorted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dangerous Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incompatible Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiffy Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Length</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Phone__c</fullName>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Consignment_Number__c</fullName>
        <label>Consignment Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time_for_Reporting__c</fullName>
        <description>Use this field in reports where the standard field will not show the time in reports</description>
        <formula>CreatedDate</formula>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Hour__c</fullName>
        <description>Calculates the Hour that the Booking record was created in and can be used in reports</description>
        <formula>IF ( DATEVALUE(Created_Date_Time_for_Reporting__c) &gt;=
DATE ( YEAR (DATEVALUE(Created_Date_Time_for_Reporting__c)),3,1)
+
(
14-
CASE( MOD(DATE ( YEAR (DATEVALUE(Created_Date_Time_for_Reporting__c)),3,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(Created_Date_Time_for_Reporting__c)),3,1) - DATE (1900,1,7),7))
)
&amp;&amp;
DATEVALUE(Created_Date_Time_for_Reporting__c) &lt;
DATE ( YEAR (DATEVALUE(Created_Date_Time_for_Reporting__c)),11,1)
+
(
7-
CASE( MOD(DATE ( YEAR (DATEVALUE(Created_Date_Time_for_Reporting__c)),11,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(Created_Date_Time_for_Reporting__c)),11,1) - DATE (1900,1,7),7))
),
VALUE (MID ( TEXT (Created_Date_Time_for_Reporting__c+ 1/24 ), 12, 2)),
VALUE (MID ( TEXT (Created_Date_Time_for_Reporting__c+ 0/24), 12, 2))
)</formula>
        <label>Created Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <label>Customer Reference</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Email_Address__c</fullName>
        <label>Delivery Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DC_Fax_Number__c</fullName>
        <label>Delivery Contact Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DC_First_Name__c</fullName>
        <label>Delivery Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Last_Name__c</fullName>
        <label>Delivery Contact Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Middle_Initials__c</fullName>
        <label>Delivery Contact Middle Initials</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Mobile_Phone_Number__c</fullName>
        <label>Delivery Contact Mobile Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DC_Phone_Extension__c</fullName>
        <label>Delivery Contact Phone Extension</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Phone_Number__c</fullName>
        <label>Delivery Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DC_Title__c</fullName>
        <label>Delivery Contact Title</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dangerous_Goods__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is this a shipment of dangerous goods?</description>
        <label>Dangerous Goods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Del_Account_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Address</label>
        <referenceTo>Account_Address__c</referenceTo>
        <relationshipLabel>Bookings (Delivery Account Address)</relationshipLabel>
        <relationshipName>DeliveryBookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Del_City__c</fullName>
        <description>TOWN from GB Mailer</description>
        <label>City/Town</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Del_Country__c</fullName>
        <description>Default &quot;GBR&quot; (ISO-3 Code)</description>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Del_County__c</fullName>
        <description>CNTY from GB Mailer</description>
        <label>County/Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Del_District__c</fullName>
        <description>DPLO from GB Mailer</description>
        <label>District</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Del_Org_Name__c</fullName>
        <description>ORGN from GB Mailer</description>
        <label>Delivery Org Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Del_Postcode__c</fullName>
        <description>PCOD from GB Mailer</description>
        <label>Delivery Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Del_Premise_Name__c</fullName>
        <description>BNAM from GB Mailer</description>
        <label>Premise Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Del_Premise_Number__c</fullName>
        <description>BNUM from GB Mailer</description>
        <label>Premise Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Del_Street_1__c</fullName>
        <description>THOR from GB Mailer</description>
        <label>Street Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Del_Street_2__c</fullName>
        <description>DDLO from GB Mailer</description>
        <label>Street Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Del_Sub_Premise__c</fullName>
        <description>SUBB from GB Mailer</description>
        <label>Sub Premise</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bookings (Delivery Contact)</relationshipLabel>
        <relationshipName>DC_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Depot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated by routing table logic</description>
        <label>Delivery Depot</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Delivery Depot must be an Account of type &quot;Depot&quot;.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Depot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bookings (Delivery Depot)</relationshipLabel>
        <relationshipName>DelDepBookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Instructions__c</fullName>
        <label>Delivery Instructions</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depot_Routing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Depot Routing</label>
        <referenceTo>Depot_Routing__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_the_booking_reference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field to indicate that contact wants to be emailed the booking reference</description>
        <inlineHelpText>Does the contact want the booking emailed to them?</inlineHelpText>
        <label>Email the booking reference?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enhanced_Liability__c</fullName>
        <description>The Tier/Level of Enhanced Liability selected by the customer for a Booking/Quote 
&quot;Account level&quot; should be forced and value not selectable if Transit Liability Charge and Transit Liability Value is set on Account LOB record</description>
        <inlineHelpText>EL not available for precious stones, precious metals, laptop computers, plasma and LCD screens, jewellery, money, glass, china, objects of art, antiques, documents or any films, tapes, discs, memory cards or any such other data or image carrying goods.</inlineHelpText>
        <label>Enhanced Liability</label>
        <picklist>
            <picklistValues>
                <fullName>0 - None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1 - £4.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - £7.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - £10.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goods_Description__c</fullName>
        <label>Description of Goods</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hazchem_1_Packing_Class__c</fullName>
        <label>Hazchem Packing Class 1</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hazchem_1_Quantity__c</fullName>
        <label>Hazchem Quantity 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hazchem_1_Technical_Name__c</fullName>
        <label>Hazchem Technical Name 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hazchem_1_UN_Number__c</fullName>
        <label>Hazchem UN Number 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hazchem_1_UOM__c</fullName>
        <label>Hazchem Unit of Measure 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hazchem_2_Packing_Class__c</fullName>
        <label>Hazchem Packing Class 2</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hazchem_2_Quantity__c</fullName>
        <label>Hazchem Quantity 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hazchem_2_Technical_Name__c</fullName>
        <label>Hazchem Technical Name 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hazchem_2_UN_Number__c</fullName>
        <label>Hazchem UN Number 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hazchem_2_UOM__c</fullName>
        <label>Hazchem Unit of Measure 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hazchem_3_Packing_Class__c</fullName>
        <label>Hazchem Packing Class 3</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hazchem_3_Quantity__c</fullName>
        <label>Hazchem Quantity 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hazchem_3_Technical_Name__c</fullName>
        <label>Hazchem Technical Name 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hazchem_3_UN_Number__c</fullName>
        <label>Hazchem UN Number 3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hazchem_3_UOM__c</fullName>
        <label>Hazchem Unit of Measure 3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv_City__c</fullName>
        <label>City/Town</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv_Country__c</fullName>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv_County__c</fullName>
        <label>County/Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv_District__c</fullName>
        <label>District</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Inv_Org_Name__c</fullName>
        <label>Invoice Org Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv_Phone__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Inv_Postcode__c</fullName>
        <label>Invoice Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv_Premise_Name__c</fullName>
        <label>Premise Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv_Premise_Number__c</fullName>
        <label>Premise Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv_Street_1__c</fullName>
        <label>Street Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv_Street_2__c</fullName>
        <label>Street Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv_Sub_Premise__c</fullName>
        <label>Sub Premise</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Synchronisation_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Synchronisation Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Restricted by Line of Buisness on Account (Account_LOB__c)</description>
        <label>Line of Business (Division)</label>
        <referenceTo>Line_of_Business__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lunch_End__c</fullName>
        <label>Unavailable End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lunch_Start__c</fullName>
        <label>Unavailable Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Round_Number__c</fullName>
        <description>Auto populated by routing table logic</description>
        <label>Master Round Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_LOB_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Divisional Account Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Collected_Reason__c</fullName>
        <description>Not editable, supplied by integration</description>
        <label>Not Collected Reason</label>
        <picklist>
            <picklistValues>
                <fullName>RET 2 ORIG BY HUB/GATEWAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CON TRANSHIPPED DATA ONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CON PHYSICALLY TRANSHIPPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELAYED BY STRIKE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VERBAL POD CONFIRM ONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WRONG DELIVERY ROUTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEL AREA INACCESSIBLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VEHICLE BREAKDOWN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHECK ADDRESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO DOCUMENTATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT YET ATTEMPTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOVED/CHANGED DEL ADDRESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOODS NOT READY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAZARDOUS GOODS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDUSTRIAL ACTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISSED PICK UP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HELD FOR CUSTOMER PICK UP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSIGNEE ON HOLIDAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISSED ON DEL ROUTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT HOME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPANY CLOSED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSUFFICIENT PACKAGING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QUEUING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSIGNMENT/ITEM REFUSED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT DEL NITE BOX FULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LACK OF DRIVER TIME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLL/DEL UNKNOWN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VEHICLE / DRIVER ACCIDENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADVERSE WEATHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO GOODS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Consignments__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number of Consignments</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OC_Email_Address__c</fullName>
        <label>Order Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OC_Fax_Number__c</fullName>
        <label>Order Contact Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OC_First_Name__c</fullName>
        <label>Order Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OC_Last_Name__c</fullName>
        <label>Order Contact Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>